updated config and .gitignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,13 +17,8 @@ classifiers =
 [options]
 py_modules = flip_book
 install_requires:
-
+    identify>=1.4.23
 python_requires = >= 3.6.1
-
-[options.packages.find]
-exclude =
-    tests*
-    tests
 
 [options.entry_points]
 console_scripts =
